# radpy

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
radpy/: LDfitting.py  UDfitting.py  batchmode.py  config.py  datareadandformat.py  plotting.py  stellar.py
radpy/data/: PAVOdata.csv  Vegadata.csv  ldcHA.csv  ldcHP.csv  ldcJA.csv  ldcJP.csv  ldcKA.csv  ldcKP.csv  ldcRA.csv  ldcRP.csv
src/radpy/: LDfitting.py  UDfitting.py  config.py  datareadandformat.py  fitting.py  limbdarkcoeffs.py  oifitstodf.py  process.py  stellar.py
src/radpy/data/: ldc_I_table.csv  ldc_k_table.csv
tests/: BatchModeTesting.ipynb  BatchModeTutorial.ipynb  SingleStarTesting.ipynb  SingleStarTutorial.ipynb  Testing_Notebook.ipynb  Tutorial.ipynb  output_184499.txt
tests/Diams/Diams/: output_113337.eps  output_127334.eps  output_144579.eps  output_16141  output_164922.eps  output_181096  output_184499  output_184499.eps  output_185269.eps  output_190228  output_193664.eps  output_195019  output_196885.eps  output_197037  output_197037.eps  output_202568  output_210277  output_210277.eps  output_222155  output_22879  output_30562  output_30562.eps  output_42807.eps  output_58551  output_58551.eps  output_8673.eps  radpy_params.txt
tests/Diams/Test/: ClassicData_219134.csv  PAVOoutput_10697  PAVOoutput_8574  Test_results.tex  star_testlist.txt
tests/test_data/SingleStarTest/: MIRCXMY_HD219134_JUNE11162025.oifits  MIRCX_June11162025_HD_219134.oifits  MYSTIC_June11162025_HD_219134.oifits  MYSTIC_June11612025_HD_219134.oifits
tests/test_data/Test/: PAVOoutput_1461  PAVOoutput_20367  PAVOoutput_8673  Test_results.tex  star_testlist.txt
tests/test_data/Test2/: PAVOoutput_108510  SPICA_01_2025-06-11T11-16-21_HD_219134.fits  Test_results.tex  radpy_params_test.txt
tests/test_data/Test3/: MIRCX_HD219134_2025Jun11.oifits  MIRCX_HD219134_2025Jun16.oifits  MIRCX_June11162025_HD_219134.oifits  MYSTIC_HD219134_2025Jun11.oifits  MYSTIC_HD219134_2025Jun16.oifits  output_10697.eps  output_108510.eps  output_113337  output_127334  output_144579  output_1461.eps  output_154345  output_154345.eps  output_16141.eps  output_164922  output_181096.eps  output_182488  output_182488.eps  output_185269  output_190228.eps  output_193664  output_195019.eps  output_196885  output_202568.eps  output_20367.eps  output_222155.eps  output_22879.eps  output_23596  output_23596.eps  output_42807  output_76932  (+2 more)
(+1 files in other folders)
