[tool.poetry]
name = "rsadpy"
version = "0.1.0"
description = "Robust Angular Diameters in Python: an angular diameter fitting routine for multi-wavelength interferometric data"
authors = ["Ashley Elliott <elliottashleya99@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
keywords = ["interferometry", "angular diameters", "CHARA"]
repository = "https://github.com/spaceashley/radpy.git"
packages = [
  { include = "radpy" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
astropy = "6.1.6"
astroquery = "0.4.6"
corner = "2.2.2"
ipympl = "0.9.4"
lmfit = "1.2.2"
matplotlib = "3.9.2"
numpy = "1.25.2"
pandas = "2.2.2"
scipy = "1.10.0"
gaiadr3-zeropoint = "^0.0.4"
pytest = "7.1.2"
uncertainties = "3.1.7"

[tool.poetry.urls]
repository = "https://github.com/spaceashley/radpy.git"

# Uncomment and edit if you need to include additional data files
#[tool.poetry.include]
# files = [
#     "src/radpy/data/ldc_I_table/csv",
#     "src/radpy/data/ldc_k_table.csv",
#     "src/radpy/data/ldctable.csv"
# ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"